TestRepo2/src/objects/Related_Link__c.object
<CustomObject>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Related Links</relationshipLabel>
        <relationshipName>Related_Links1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Related Link</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>